<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activitis.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mostly_cloudy"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="32dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/cloudy_sunny"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mon_june_17_10_00_am"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textAlignment="center"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_25"
                android:textColor="@color/white"
                android:textSize="63sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h_27_l_18"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/background2"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/rain"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_22"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rain"
                        android:textAlignment="center"

                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView31"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/wind"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:id="@+id/textView51"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_km_h"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView62"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"

                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:src="@drawable/humidity"
                        android:contentDescription="@string/todoo" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_18"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView61"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textAlignment="center"

                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/today"
                    android:textColor="#DCA900"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/nextBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_7_day"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:id="@+id/view1"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>