<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activitis.FuturActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="0.5"
                        android:src="@drawable/cloudy_sunny"
                        android:importantForAccessibility="no" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_Tomorrow"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="25°"
                            android:textColor="@color/white"
                            android:textSize="43sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_Mostly_Cloudy"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:importantForAccessibility="no"
                            android:src="@drawable/rain" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_22"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rain"
                            android:textAlignment="center"

                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView31"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:importantForAccessibility="no"
                            android:src="@drawable/wind" />

                        <TextView
                            android:id="@+id/textView51"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_12_km_h"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView62"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed"
                            android:textAlignment="center"

                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp"
                        android:layout_weight="0.333"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="34dp"
                            android:layout_height="34dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todoo"
                            android:src="@drawable/humidity" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_18"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView61"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="true" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>